test/sema/typeck/generic/type-param-name-no-call-fn.dora
trait X { fn foo(): Int32; }
fn f[T: X]() { T::foo; }
